// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should import variables into cloud "frodo config-manager push variables --env-file test/e2e/env/configManager2.env --env-file test/e2e/env/configManager1.env  -D test/e2e/exports/fr-config-manager/cloud ": should not import two variables into cloud when no changes" 1`] = `""`;

exports[`Should import variables into cloud "frodo config-manager push variables --env-file test/e2e/env/configManager2.env --env-file test/e2e/env/configManager1.env  -D test/e2e/exports/fr-config-manager/cloud ": should not import two variables into cloud when no changes" 2`] = `
"Experimental feature in use: 'frodo config-manager push variables'. This feature may change without notice.
✔ Successfully read 2 variables.
Variable esv-fr-var-test updated
Variable esv-blue-piller unchanged
Variable esv-fr-var-test-2 pending restart
Variable esv-frodo-test-variable-1 unchanged
Variable esv-frodo-test-variable-2 unchanged
Variable esv-ipv4-cidr-access-rules unchanged
Variable esv-nebuchadnezzar-crew unchanged
Variable esv-nebuchadnezzar-crew-structure unchanged
Variable esv-neo-age unchanged
Variable esv-number unchanged
Variable esv-saml-var-test unchanged
Variable esv-test unchanged
Variable esv-test-var unchanged
Variable esv-test-var-pi unchanged
Variable esv-test-var-pi-string unchanged
Variable esv-test-variable-light unchanged
Variable esv-trinity-phone unchanged
✔ 1 variables imported.
Changes made to variables: 1 updated, 16 unchanged
"
`;

exports[`Should import variables into cloud "frodo config-manager push variables --force-update -n esv-fr-var-test-2 --env ESV_FR_VAR_TEST_2=20 -D test/e2e/exports/fr-config-manager/cloud ": should import the specified variable into cloud" 1`] = `""`;

exports[`Should import variables into cloud "frodo config-manager push variables --force-update -n esv-fr-var-test-2 --env ESV_FR_VAR_TEST_2=20 -D test/e2e/exports/fr-config-manager/cloud ": should import the specified variable into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push variables'. This feature may change without notice.
✔ Successfully read 1 variables.
Variable esv-fr-var-test-2 unchanged
✔ 1 variables imported.
No changes, (1 variable(s) already up to date)
"
`;

exports[`Should import variables into cloud "frodo config-manager push variables --name esv-fr-var-test --env ESV_FR_VAR_TEST="test2" --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should not import the specified variable into cloud when no changes" 1`] = `""`;

exports[`Should import variables into cloud "frodo config-manager push variables --name esv-fr-var-test --env ESV_FR_VAR_TEST="test2" --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should not import the specified variable into cloud when no changes" 2`] = `
"Experimental feature in use: 'frodo config-manager push variables'. This feature may change without notice.
✔ Successfully read 1 variables.
Variable esv-fr-var-test updated
✔ 1 variables imported.
Changes made to variables: 1 updated, 0 unchanged
"
`;

exports[`Should import variables into cloud "frodo config-manager push variables -F -E ESV_FR_VAR_TEST_2="20" -E ESV_FR_VAR_TEST='this is a test' -D test/e2e/exports/fr-config-manager/cloud ": should import two variables into cloud" 1`] = `""`;

exports[`Should import variables into cloud "frodo config-manager push variables -F -E ESV_FR_VAR_TEST_2="20" -E ESV_FR_VAR_TEST='this is a test' -D test/e2e/exports/fr-config-manager/cloud ": should import two variables into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push variables'. This feature may change without notice.
✔ Successfully read 2 variables.
Variable esv-fr-var-test-2 unchanged
Variable esv-fr-var-test updated
✔ 2 variables imported.
Changes made to variables: 1 updated, 1 unchanged
"
`;
